# kimainai

./: Cargo.toml  README.md
src/: args.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
src/kimai/: api.rs  mod.rs
src/kimai/activities/: list.rs  mod.rs
src/kimai/customer/: list.rs  mod.rs
src/kimai/projects/: list.rs  mod.rs
src/kimai/teams/: mod.rs
src/kimai/timesheet/: mod.rs
src/kimai/user/: me.rs  mod.rs
src/kimai/workday/: datetime.rs  file.rs  mod.rs  util.rs
src/util/: args.rs
