[package]
name = "kimainai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "string"] }
reqwest = { version = "0.12.12" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
thiserror = { version = "2.0.11" }
dirs = { version = "6.0.0" }