[package]
name = "kimainai"
version = "0.1.0"
edition = "2021"
description = "A bare bones Kimai CLI lient for people with strong aversions to time tracking."
authors = ['Roman Geber <geber@b1-systms.de>']
license = "MIT"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 2 # Optimize for binary size
panic = "abort" # Strip expensive panic clean-up logic
strip = true # Remove debug symbols

[dependencies]
clap = { version = "4.5.28", features = ["derive", "string"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
thiserror = { version = "2.0.11" }
dirs = { version = "6.0.0" }
toml = { version = "0.8.20", features = ["default"] }
chrono = { version = "0.4.39", features = ["default", "serde"] }